--- a/.env
+++ b/.env
@@ -1,3 +1,1 @@
-PORT=5000
-DATABASE_URL=postgres://root:12345@localhost:3306/STUDENT_PORTAL
-JWT_SECRET=BITSTOBUG
+DB_CONNECTION_STRING=postgresql://users_0m8o_user:DmDIxOhqPUnsxFeSoSUeRCMQE4USfXCs@dpg-cu3okel2ng1s73ccgi5g-a.oregon-postgres.render.com/users_0m8o
